--- a/deployment-config.json
+++ b/deployment-config.json
@@ -1,7 +1,7 @@
 [{
-    "name": "server-1",
-    "ip": "",
-    "username": "",
+    "name": "ubuntu",
+    "ip": "18.204.14.129",
+    "username": "ubuntu",
     "password": "",
     "port": "22",
     "beforeHooks": "echo $GITHUB_SHA",
