--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,10 +17,10 @@ jobs:
           npm install
           npm run prod
 
-      - name: Configure PHP 7.2
+      - name: Configure PHP 7.4
         uses: shivammathur/setup-php@master
         with: 
-          php-version: 7.2
+          php-version: 7.4
           extensions: mbstring, ctype, fileinfo, openssl, PDO, bcmath, json, tokenizer, xml, intl
       
       - name: Install Composer Dependencies
@@ -90,7 +90,7 @@ jobs:
 
             mkdir -p ${{ matrix.server.path }}/storage/{app,public,framework,logs}
             mkdir -p ${{ matrix.server.path }}/storage/framework/{cache,sessions,testing,views}
-            chmod -R 0777 ${{ matrix.server.path }}/storage
+            sudo chmod -R 0777 ${{ matrix.server.path }}/storage
 
   run-before-hooks:
     name: "${{ matrix.server.name }}: Before hook"
@@ -147,7 +147,7 @@ jobs:
             ln -s -f ${BASE_PATH}/.env $RELEASE_PATH
             ln -s -f $STORAGE_PATH $RELEASE_PATH
             ln -s -n -f $RELEASE_PATH $ACTIVE_RELEASE_PATH
-            service php7.2-fpm reload
+            sudo service php7.4-fpm reload
   
   run-after-hooks:
     name: "${{ matrix.server.name }}: After hook"
